CoA and Vendor exports are working and tested.

--- a/EpicorToYooz/App.config
+++ b/EpicorToYooz/App.config
@@ -80,6 +80,24 @@
       <setting name="FileName_POs" serializeAs="String">
         <value>POs.csv</value>
       </setting>
+      <setting name="Export_ChartOfAccounts_Version" serializeAs="String">
+        <value>v20120430</value>
+      </setting>
+      <setting name="Export_ChartOfAccounts_Header" serializeAs="String">
+        <value>ACCOUNTANT_PLAN_TAB			</value>
+      </setting>
+      <setting name="Export_PO_Version" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Export_PO_Header" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Export_Vendor_Version" serializeAs="String">
+        <value>v20120430</value>
+      </setting>
+      <setting name="Export_Vendor_Header" serializeAs="String">
+        <value>SUPPLIER_TAB																																						</value>
+      </setting>
     </EpicorToYooz.Properties.Settings>
   </applicationSettings>
 </configuration>
