--- a/EpicorToYooz/Properties/Settings.settings
+++ b/EpicorToYooz/Properties/Settings.settings
@@ -56,5 +56,23 @@
     <Setting Name="FileName_POs" Type="System.String" Scope="Application">
       <Value Profile="(Default)">POs.csv</Value>
     </Setting>
+    <Setting Name="Export_ChartOfAccounts_Version" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">v20120430</Value>
+    </Setting>
+    <Setting Name="Export_ChartOfAccounts_Header" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ACCOUNTANT_PLAN_TAB			</Value>
+    </Setting>
+    <Setting Name="Export_PO_Version" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Export_PO_Header" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Export_Vendor_Version" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">v20120430</Value>
+    </Setting>
+    <Setting Name="Export_Vendor_Header" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">SUPPLIER_TAB																																						</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
