--- a/EpicorToYooz/App.config
+++ b/EpicorToYooz/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="EpicorToYooz.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="EpicorToYooz.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -27,16 +30,16 @@
   <applicationSettings>
     <EpicorToYooz.Properties.Settings>
       <setting name="Epicor_Server" serializeAs="String">
-        <value>e101.sixspartners.us</value>
+        <value>EPDev</value>
       </setting>
       <setting name="Epicor_Instance" serializeAs="String">
-        <value>Demo_102400</value>
+        <value>Epicor10</value>
       </setting>
       <setting name="Epicor_User" serializeAs="String">
-        <value>manager</value>
+        <value>trigem</value>
       </setting>
       <setting name="Epicor_Pass" serializeAs="String">
-        <value>manager</value>
+        <value>sixspartners</value>
       </setting>
       <setting name="BAQ_ChartOfAccounts" serializeAs="String">
         <value>YOOZ_ChartOfAccounts</value>
@@ -48,7 +51,7 @@
         <value>YOOZ_POs</value>
       </setting>
       <setting name="TempDirectory" serializeAs="String">
-        <value>c:\Scratch\</value>
+        <value>c:\scratch\</value>
       </setting>
       <setting name="sFTP_URL" serializeAs="String">
         <value>sftp2.justyoozit.com</value>
@@ -98,6 +101,16 @@
       <setting name="Export_Vendor_Header" serializeAs="String">
         <value>SUPPLIER_TAB																																						</value>
       </setting>
+      <setting name="Epicor_Company" serializeAs="String">
+        <value>ESC</value>
+      </setting>
     </EpicorToYooz.Properties.Settings>
   </applicationSettings>
+  <userSettings>
+    <EpicorToYooz.Properties.Settings>
+      <setting name="LastExecution" serializeAs="String">
+        <value />
+      </setting>
+    </EpicorToYooz.Properties.Settings>
+  </userSettings>
 </configuration>
