--- a/EpicorToYooz/App.config
+++ b/EpicorToYooz/App.config
@@ -51,7 +51,7 @@
         <value>YOOZ_POs</value>
       </setting>
       <setting name="TempDirectory" serializeAs="String">
-        <value>c:\scratch\</value>
+        <value>c:\scratch\Uploads</value>
       </setting>
       <setting name="sFTP_URL" serializeAs="String">
         <value>sftp2.justyoozit.com</value>
@@ -103,6 +103,9 @@
       </setting>
       <setting name="Epicor_Company" serializeAs="String">
         <value>ESC</value>
+      </setting>
+      <setting name="SkipFTPUpload" serializeAs="String">
+        <value>True</value>
       </setting>
     </EpicorToYooz.Properties.Settings>
   </applicationSettings>
