Finished up Yooz->Epicor integration

--- a/YoozToEpicor/App.config
+++ b/YoozToEpicor/App.config
@@ -47,6 +47,9 @@
                 <value>False</value>
             </setting>
             <setting name="DeleteTempFilesAfterProcessing" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DevOption_SkipDownloadingNewFiles" serializeAs="String">
                 <value>True</value>
             </setting>
         </YoozToEpicor.Properties.Settings>
