--- a/EpicorToYooz/App.config
+++ b/EpicorToYooz/App.config
@@ -112,7 +112,7 @@
   <userSettings>
     <EpicorToYooz.Properties.Settings>
       <setting name="LastExecution" serializeAs="String">
-        <value />
+        <value>2019-10-13</value>
       </setting>
     </EpicorToYooz.Properties.Settings>
   </userSettings>
