Added misc invoice processing and duplicate invoiceNumber validation.

--- a/YoozToEpicor/App.config
+++ b/YoozToEpicor/App.config
@@ -47,7 +47,7 @@
                 <value>False</value>
             </setting>
             <setting name="DeleteTempFilesAfterProcessing" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="DevOption_SkipDownloadingNewFiles" serializeAs="String">
                 <value>True</value>
