Feature Complete 1.0. Implemented Misc and Unreceived invoices

--- a/EpicorToYooz/App.config
+++ b/EpicorToYooz/App.config
@@ -105,7 +105,7 @@
         <value>ESC</value>
       </setting>
       <setting name="SkipFTPUpload" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
     </EpicorToYooz.Properties.Settings>
   </applicationSettings>
