--- a/YoozToEpicor/NLog.config
+++ b/YoozToEpicor/NLog.config
@@ -11,6 +11,6 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="console"/>
+    <logger name="*" minlevel="Info" writeTo="console"/>
   </rules>
 </nlog>
