--- a/EpicorToYooz/Properties/Settings.settings
+++ b/EpicorToYooz/Properties/Settings.settings
@@ -81,7 +81,7 @@
       <Value Profile="(Default)">2019-10-13</Value>
     </Setting>
     <Setting Name="SkipFTPUpload" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
