Corrected GL Account setting. Ensure files aren't deleted without successful processing.

--- a/EpicorToYooz/App.config
+++ b/EpicorToYooz/App.config
@@ -30,7 +30,7 @@
   <applicationSettings>
     <EpicorToYooz.Properties.Settings>
       <setting name="Epicor_Server" serializeAs="String">
-        <value>EPDev</value>
+        <value>QADev</value>
       </setting>
       <setting name="Epicor_Instance" serializeAs="String">
         <value>Epicor10</value>
