--- a/YoozToEpicor/App.config
+++ b/YoozToEpicor/App.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <YoozToEpicor.Properties.Settings>
             <setting name="Epicor_Server" serializeAs="String">
-                <value>EPDev</value>
+                <value>QADev</value>
             </setting>
             <setting name="Epicor_Instance" serializeAs="String">
                 <value>Epicor10</value>
