Bugs in payment export.

--- a/EpicorToYooz/App.config
+++ b/EpicorToYooz/App.config
@@ -60,16 +60,16 @@
         <value>2222</value>
       </setting>
       <setting name="sFTP_User" serializeAs="String">
-        <value>cartieda@374</value>
+        <value>ftpuser@374</value>
       </setting>
       <setting name="sFTP_Pass" serializeAs="String">
-        <value>Yooz@2015</value>
+        <value>Euclid19</value>
       </setting>
       <setting name="sFTP_Path_ChartOfAccount" serializeAs="String">
-        <value>/OrganisationalUnits/01/import/ACCOUNTS</value>
+        <value>/OrganisationalUnits/01/import/MASTER_DATA</value>
       </setting>
       <setting name="sFTP_Path_Vendors" serializeAs="String">
-        <value>/OrganisationalUnits/01/import/VENDORS</value>
+        <value>/OrganisationalUnits/01/import/MASTER_DATA</value>
       </setting>
       <setting name="sFTP_Path_POs" serializeAs="String">
         <value>/OrganisationalUnits/01/import/PURCHASE_ORDER</value>
@@ -107,12 +107,27 @@
       <setting name="SkipFTPUpload" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="BAQ_Payments" serializeAs="String">
+        <value>YOOZ_Payments</value>
+      </setting>
+      <setting name="FileName_Payments" serializeAs="String">
+        <value>Payments.xml</value>
+      </setting>
+      <setting name="Export_Payments_Version" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Export_Payments_Header" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="sFTP_Path_Payments" serializeAs="String">
+        <value>/OrganisationalUnits/01/import/FEEDBACK</value>
+      </setting>
     </EpicorToYooz.Properties.Settings>
   </applicationSettings>
   <userSettings>
     <EpicorToYooz.Properties.Settings>
       <setting name="LastExecution" serializeAs="String">
-        <value>2019-10-13</value>
+        <value>2018-09-01</value>
       </setting>
     </EpicorToYooz.Properties.Settings>
   </userSettings>
