--- a/YoozToEpicor/App.config
+++ b/YoozToEpicor/App.config
@@ -32,10 +32,10 @@
                 <value>2222</value>
             </setting>
             <setting name="sFTP_User" serializeAs="String">
-                <value>cartieda@374</value>
+                <value>ftpuser@374</value>
             </setting>
             <setting name="sFTP_Pass" serializeAs="String">
-                <value>Yooz@2015</value>
+                <value>Euclid19</value>
             </setting>
             <setting name="sFTP_Path" serializeAs="String">
                 <value>/OrganisationalUnits/01/export</value>
@@ -44,13 +44,13 @@
                 <value>ESC</value>
             </setting>
             <setting name="DeleteFTPFilesAfterDownload" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DeleteTempFilesAfterProcessing" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="DevOption_SkipDownloadingNewFiles" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </YoozToEpicor.Properties.Settings>
     </applicationSettings>
