--- a/YoozToEpicor/Properties/Settings.settings
+++ b/YoozToEpicor/Properties/Settings.settings
@@ -24,10 +24,10 @@
       <Value Profile="(Default)">2222</Value>
     </Setting>
     <Setting Name="sFTP_User" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">cartieda@374</Value>
+      <Value Profile="(Default)">ftpuser@374</Value>
     </Setting>
     <Setting Name="sFTP_Pass" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Yooz@2015</Value>
+      <Value Profile="(Default)">Euclid19</Value>
     </Setting>
     <Setting Name="sFTP_Path" Type="System.String" Scope="Application">
       <Value Profile="(Default)">/OrganisationalUnits/01/export</Value>
@@ -36,13 +36,13 @@
       <Value Profile="(Default)">ESC</Value>
     </Setting>
     <Setting Name="DeleteFTPFilesAfterDownload" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DeleteTempFilesAfterProcessing" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DevOption_SkipDownloadingNewFiles" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
