Corrected issue with payment files being uploaded with CSV extension despite being XML files.

--- a/YoozToEpicor/App.config
+++ b/YoozToEpicor/App.config
@@ -50,7 +50,7 @@
                 <value>False</value>
             </setting>
             <setting name="DevOption_SkipDownloadingNewFiles" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </YoozToEpicor.Properties.Settings>
     </applicationSettings>
