Failed files will now be archived instead of remaining in the 'processing' directory.

--- a/YoozToEpicor/App.config
+++ b/YoozToEpicor/App.config
@@ -52,6 +52,9 @@
             <setting name="DevOption_SkipDownloadingNewFiles" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ArchiveDirectory" serializeAs="String">
+                <value>c:\scratch\Archive\</value>
+            </setting>
         </YoozToEpicor.Properties.Settings>
     </applicationSettings>
   <runtime>
