Update nLog config for email and file logging in addition to console.

--- a/YoozToEpicor/NLog.config
+++ b/YoozToEpicor/NLog.config
@@ -13,4 +13,36 @@
   <rules>
     <logger name="*" minlevel="Info" writeTo="console"/>
   </rules>
+
+  <targets>
+    <target xsi:type="BufferingWrapper"
+            name="BufferedEmail"
+            bufferSize="200"
+            flushTimeout="-1">
+      <target xsi:type="Mail"
+              name="email"
+              smtpUserName="user"
+              smtpPassword="pass"
+              smtpServer="server"
+              addNewLines="true"
+              layout="${uppercase:${level}}: ${message}"
+              subject="Layout"
+              to=""
+              bcc=""
+              cc=""
+              from="TabSyncProcess@abbottsdomain.com"/>
+    </target>
+
+    <target xsi:type="File" 
+            name="file" 
+            deleteOldFileOnStartup="true"
+            fileName="$Log.log"
+            layout="${uppercase:${level}}: ${message}"/>
+  </targets>
+
+  <rules>
+    <logger name="*" minlevel="Error" writeTo="BufferedEmail" />
+    <logger name="*" minlevel="Trace" writeTo="file" />
+    <logger name="*" minlevel="Trace" writeTo="console" />
+  </rules>
 </nlog>
