Uplifted to 10.2.500. Several REST calls require a new 'confirmCheck' parameter. Also added a configurable default Terms Code to be used when a supplier doesn't have a code specified.

--- a/YoozToEpicor/App.config
+++ b/YoozToEpicor/App.config
@@ -11,16 +11,16 @@
     <applicationSettings>
         <YoozToEpicor.Properties.Settings>
             <setting name="Epicor_Server" serializeAs="String">
-                <value>QADev</value>
+                <value>US-SVR-ERPAPP1</value>
             </setting>
             <setting name="Epicor_Instance" serializeAs="String">
-                <value>Epicor10</value>
+                <value>ERP102500</value>
             </setting>
             <setting name="Epicor_User" serializeAs="String">
                 <value>trigem</value>
             </setting>
             <setting name="Epicor_Pass" serializeAs="String">
-                <value>sixspartners</value>
+                <value>Trigem09</value>
             </setting>
             <setting name="TempDirectory" serializeAs="String">
                 <value>c:\scratch\Downloads</value>
@@ -44,16 +44,19 @@
                 <value>ESC</value>
             </setting>
             <setting name="DeleteFTPFilesAfterDownload" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DeleteTempFilesAfterProcessing" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DevOption_SkipDownloadingNewFiles" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="ArchiveDirectory" serializeAs="String">
                 <value>c:\scratch\Archive\</value>
+            </setting>
+            <setting name="DefaultTermsCode" serializeAs="String">
+                <value>NET</value>
             </setting>
         </YoozToEpicor.Properties.Settings>
     </applicationSettings>
